<resources>
    <string name="app_name">Myproject</string>
    <string name="password">Password</string>
    <string name="email_or_username">Email or Username</string>
    <string name="login">LOGIN</string>
    <string name="forgotpassword">Forgotpassword</string>
    <string name="the_link_generated_to_this_activity_will_for_24_hours">The link generated to this activity will for 24 hours</string>
    <string name="the_link_been_sent_to_your_mail">The link been sent to your mail</string>
    <string name="todo">TODO</string>
    <string name="title_activity_myrequest">Myrequest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_request">Request</string>
    <string name="button">Button</string>
    <string name="show_approval_request">Show approval request</string>
    <string name="filter">FILTER</string>
    <string name="my_request">My Request</string>
    <string name="new_request">New request</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
</resources>
