<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    tools:context=".forgotdone">

    <LinearLayout
        android:layout_width="296dp"
        android:layout_height="146dp"
        android:layout_marginTop="250dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/backgroundbox"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/box"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/forgotpassword"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="25dp"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/cancel"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:text="@string/the_link_been_sent_to_your_mail"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/the_link_generated_to_this_activity_will_for_24_hours" />
    </LinearLayout>
</LinearLayout>